--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+	
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6 col-lg-offset-3">
+				<input type="text" class="form-control" id="subreddit" placeholder="Subreddit">
+				<button type="submit" class="btn btn-default btn-block btn-lg" id="submit">View</button>
+			</div>
+		</div>
+	</div>
 	<div class="container">
 		<div class="row1">
 			<div class="col-lg-12">
