--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="redditnews">
 <head>
 	<title>A News Redesign</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.6/angular.min.js'></script>
 </head>
 <body>
 	
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-6 col-lg-offset-3">
-				<input type="text" class="form-control" id="subreddit" placeholder="Subreddit">
-				<button type="submit" class="btn btn-default btn-block btn-lg" id="submit">View</button>
-			</div>
-		</div>
-	</div>
+	<search></search>
 	<div class="container">
 		<div class="row1">
 			<div class="col-lg-12">
@@ -444,7 +438,6 @@
 	</div>
 	
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
 	<script src="js/news.js"></script>
 </body>
 </html>
