Added Vagrant file for Windows dev

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html ng-app="redditnews">
+<html>
 <head>
 	<title>A News Redesign</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.6/angular.min.js'></script>
 </head>
-<body>
+<body ng-app="redditnews">
 	
-	<search></search>
-	
-	<news></news>
+	<news-list></news-list>
 	
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src="js/news.js"></script>
