--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body ng-app="redditnews">
 	
-	<news-list></news-list>
+	<div class="container" ng-controller="rootControl">
+		<news-view></news-view>
+	</div>
 	
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src="js/news.js"></script>
