Fetches data, able to manipulate

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body ng-app="redditnews">
 	
 	<div class="container" ng-controller="rootControl">
-		<news-view></news-view>
+		<news-list></news-list>
 	</div>
 	
 	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
